--- a/contexto-de-apilamiento.html
+++ b/contexto-de-apilamiento.html
@@ -8,26 +8,62 @@
   </head>
   <body>
     <div class="phone">
-      <div class="layer-1"></div>
       <!-- bunny 1-->
-      <div class="layer-2"></div>
-      <!-- bunny 1-->
-      <div class="layer-3"></div>
+      <div class="layer-1">
+        <div class="left-ear-outer"></div>
+        <div class="left-ear-inner"></div>
+        <div class="right-ear-outer"></div>
+        <div class="right-ear-inner"></div>
+        <div class="head">
+          <div class="head__eye head__eye--left"></div>
+          <div class="head__eye head__eye--right"></div>
+        </div>
+      </div>
+      <!-- bunny 2-->
+      <div class="layer-2">
+        <div class="left-ear-outer"></div>
+        <div class="left-ear-inner"></div>
+        <div class="right-ear-outer"></div>
+        <div class="right-ear-inner"></div>
+        <div class="head">
+          <div class="head__eye head__eye--left"></div>
+          <div class="head__eye head__eye--right"></div>
+        </div>
+      </div>
       <!-- wall 1-->
-      <div class="layer-4"></div>
+      <div class="layer-3"></div>
       <!-- bunny 3-->
-      <div class="layer-5"></div>
+      <div class="layer-4">
+        <div class="left-ear-outer"></div>
+        <div class="left-ear-inner"></div>
+        <div class="right-ear-outer"></div>
+        <div class="right-ear-inner"></div>
+        <div class="head">
+          <div class="head__eye head__eye--left"></div>
+          <div class="head__eye head__eye--right"></div>
+        </div>
+      </div>
       <!-- wall 2-->
-      <div class="layer-6"></div>
+      <div class="layer-5"></div>
       <!-- bunny 4-->
-      <div class="layer-7"></div>
+      <div class="layer-6">
+        <div class="left-ear-outer"></div>
+        <div class="left-ear-inner"></div>
+        <div class="right-ear-outer"></div>
+        <div class="right-ear-inner"></div>
+        <div class="head">
+          <div class="head__eye head__eye--left"></div>
+          <div class="head__eye head__eye--right"></div>
+        </div>
+      </div>
       <!-- wall 3-->
-      <div class="layer-8"></div>
+      <div class="layer-7"></div>
       <!-- lawn 1-->
-      <div class="layer-9"></div>
+      <div class="layer-8"></div>
       <!-- lawn 2-->
-      <div class="layer-10"></div>
+      <div class="layer-9"></div>
       <!-- lawn 3-->
+      <div class="layer-10"></div>
     </div>
   </body>
 </html>
