--- a/pattern.html
+++ b/pattern.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="pattern-1"></div>
-
     <div class="wrap">
       <div class="base"></div>
       <div class="pattern-2"></div>
     </div>
+    <div class="pattern-3"></div>
   </body>
 </html>
