--- a/contexto-de-apilamiento.html
+++ b/contexto-de-apilamiento.html
@@ -31,7 +31,10 @@
         </div>
       </div>
       <!-- wall 1-->
-      <div class="layer-3"></div>
+      <div class="layer-3">
+        <div class="lawn"></div>
+        <div class="land"></div>
+      </div>
       <!-- bunny 3-->
       <div class="layer-4">
         <div class="left-ear-outer"></div>
@@ -44,7 +47,10 @@
         </div>
       </div>
       <!-- wall 2-->
-      <div class="layer-5"></div>
+      <div class="layer-5">
+        <div class="lawn"></div>
+        <div class="land"></div>
+      </div>
       <!-- bunny 4-->
       <div class="layer-6">
         <div class="left-ear-outer"></div>
@@ -57,13 +63,26 @@
         </div>
       </div>
       <!-- wall 3-->
-      <div class="layer-7"></div>
+      <div class="layer-7">
+        <div class="lawn"></div>
+        <div class="land"></div>
+      </div>
       <!-- lawn 1-->
-      <div class="layer-8"></div>
+      <div class="layer-8">
+        <div class="layer-8__left-lawn"></div>
+        <div class="layer-8__center-lawn"></div>
+        <div class="layer-8__right-lawn"></div>
+      </div>
       <!-- lawn 2-->
-      <div class="layer-9"></div>
+      <div class="layer-9">
+        <div class="layer-9__left-cloud"></div>
+        <div class="layer-9__right-cloud"></div>
+      </div>
       <!-- lawn 3-->
-      <div class="layer-10"></div>
+      <div class="layer-10">
+        <div class="layer-10__left-cloud"></div>
+        <div class="layer-10__right-cloud"></div>
+      </div>
     </div>
   </body>
 </html>
