--- a/contexto-de-apilamiento.html
+++ b/contexto-de-apilamiento.html
@@ -10,6 +10,7 @@
     <div class="phone">
       <!-- bunny 1-->
       <div class="layer-1">
+        <!-- <input type="checkbox"> -->
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -21,6 +22,7 @@
       </div>
       <!-- bunny 2-->
       <div class="layer-2">
+        <!-- <input type="checkbox"> -->
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -37,6 +39,7 @@
       </div>
       <!-- bunny 3-->
       <div class="layer-4">
+        <!-- <input type="checkbox"> -->
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -53,6 +56,7 @@
       </div>
       <!-- bunny 4-->
       <div class="layer-6">
+        <!-- <input type="checkbox"> -->
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
