--- a/animationland.html
+++ b/animationland.html
@@ -8,9 +8,17 @@
   </head>
   <body>
     <div class="phone">
+      <h1 class="title">
+        <img
+          src="./assets/img/animationland-logo.png"
+          alt="Animationland"
+          loading="lazy" />
+      </h1>
+      <h2 class="score">Score:</h2>
       <!-- bunny 1-->
+      <input type="checkbox" />
       <div class="layer-1">
-        <!-- <input type="checkbox"> -->
+        <input type="checkbox" />
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -22,7 +30,7 @@
       </div>
       <!-- bunny 2-->
       <div class="layer-2">
-        <!-- <input type="checkbox"> -->
+        <input type="checkbox" />
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -39,7 +47,7 @@
       </div>
       <!-- bunny 3-->
       <div class="layer-4">
-        <!-- <input type="checkbox"> -->
+        <input type="checkbox" />
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
@@ -56,7 +64,7 @@
       </div>
       <!-- bunny 4-->
       <div class="layer-6">
-        <!-- <input type="checkbox"> -->
+        <input type="checkbox" />
         <div class="left-ear-outer"></div>
         <div class="left-ear-inner"></div>
         <div class="right-ear-outer"></div>
