Update HTML title and CSS refactoring

--- a/animationland.html
+++ b/animationland.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/styles.css" />
-    <title>Document</title>
+    <title>Animationland</title>
   </head>
   <body>
     <div class="phone">
       <h1 class="title">
         <img
           src="./assets/img/animationland-logo.png"
-          alt="Animationland"
+          alt="Animationland logo"
           loading="lazy" />
       </h1>
       <h2 class="score">Score:</h2>
